# wiki-case

./: .gitignore  CMakeLists.txt  README.md  gresource.xml  wiki-case.geany
res/: builder.ui  wiki_page_example.json
src/: main.c  wiki.c  wiki.h
